# polymer

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  LICENSE  appveyor.yml  polymer.props  polymer.sln  readme.md
app-editor/: asset-browser.hpp  editor-app.cpp  editor-app.hpp  editor-inspector-ui.hpp  editor-ui.hpp  gizmo-controller.hpp  gui.hpp  material-editor.hpp  readme.md  scene-editor.vcxproj  scene-editor.vcxproj.filters  selection.hpp  win32.cpp  win32.hpp
app-vr-env/: bullet_debug.hpp  bullet_engine.hpp  bullet_object.hpp  bullet_utils.hpp  debug_line_renderer.hpp  vr-environment.vcxproj  vr-environment.vcxproj.filters  vr_app.cpp  vr_app.hpp  vr_hmd.cpp  vr_hmd.hpp
apps/editor/: CMakeLists.txt  asset-browser.hpp  editor-app.cpp  editor-app.hpp  editor-inspector-ui.hpp  gizmo-controller.hpp  material-editor.hpp  readme.md  scene-editor.vcxproj  scene-editor.vcxproj.filters
lib-engine/: asset-defs.hpp  asset-handle-utils.hpp  asset-handle.hpp  asset-import.hpp  asset-resolver.hpp  assets.hpp  bloom_pass.hpp  bullet_debug.hpp  bullet_engine.hpp  bullet_object.hpp  bullet_utils.hpp  bullet_visualizer.hpp  camera-controllers.hpp  engine.hpp  environment.cpp  environment.hpp  fwd_renderer.cpp  fwd_renderer.hpp  hmd-base.cpp  hmd-base.hpp  lib-engine.hpp  lib-engine.vcxproj  lib-engine.vcxproj.filters  logging.hpp  material-library.cpp  material-library.hpp  material.cpp  material.hpp  openvr-camera.cpp  openvr-camera.hpp  openvr-hmd.cpp  openvr-hmd.hpp  profiling.hpp  renderer-debug.hpp  renderer-pbr.cpp  renderer-pbr.hpp  renderer-standard.cpp  renderer-standard.hpp  renderer-uniforms.hpp  renderer-util.hpp  (+23 more)
lib-model-io/: fbx-importer.cpp  fbx-importer.hpp  lib-model-io.vcxproj  lib-model-io.vcxproj.filters  model-io-util.hpp  model-io.cpp  model-io.hpp
lib-polymer/: algo-misc.hpp  algo_misc.hpp  any.hpp  arcball.hpp  bit_mask.hpp  bvh.hpp  camera.hpp  circular_buffer.hpp  colormap.hpp  file-io.hpp  file_io.hpp  geometry.hpp  guid.hpp  human_time.hpp  image-buffer.hpp  index.hpp  lib-polymer.cpp  lib-polymer.hpp  lib-polymer.vcxproj  lib-polymer.vcxproj.filters  math-color.hpp  math-common.hpp  math-core.hpp  math-euclidean.hpp  math-morton.hpp  math-primitives.hpp  math-projection.hpp  math-ray.hpp  math-sampling.hpp  math-spatial.hpp  memory-pool.hpp  movement-tracker.hpp  movement_tracker.hpp  mpmc_blocking_queue.hpp  mpmc_bounded_queue.hpp  mpsc_bounded_queue.hpp  mpsc_queue.hpp  octree.hpp  one-euro.hpp  one_euro.hpp  (+40 more)
lib-render/: bloom_pass.hpp  fwd_renderer.cpp  logging.hpp  (+9 more)
libraries/lib-app-base/: CMakeLists.txt
libraries/lib-app-base/include/polymer-app-base/: camera-controllers.hpp  glfw-app.hpp  ui-actions.hpp
libraries/lib-app-base/include/polymer-app-base/wrappers/: IconsFontAwesome4.h  gl-gizmo.hpp  gl-imgui.hpp  gl-nvg.hpp
libraries/lib-app-base/src/: gl-imgui.cpp  gl-nvg.cpp  gl-particle-system.cpp  glfw-app.cpp
libraries/lib-engine/: CMakeLists.txt
libraries/lib-engine/include/polymer-engine/: lib-engine.hpp  logging.hpp  material-library.hpp  material.hpp  object.hpp  profiling.hpp  scene.hpp  serialization.hpp  shader-library.hpp  shader.hpp
libraries/lib-engine/include/polymer-engine/asset/: asset-handle-utils.hpp  asset-handle.hpp  asset-import.hpp  asset-resolver.hpp
libraries/lib-engine/include/polymer-engine/ecs/: component-pool.hpp  core-ecs.hpp  core-events.cpp  core-events.hpp  typeid.hpp
libraries/lib-engine/include/polymer-engine/renderer/: hosek_data_rgb.inl  renderer-debug.hpp  renderer-pbr.hpp  renderer-procedural-sky.hpp  renderer-uniforms.hpp  renderer-util.hpp
libraries/lib-engine/include/polymer-engine/system/: system-collision.hpp  system-identifier.hpp  system-render.hpp  system-transform.hpp  system-util.hpp
libraries/lib-engine/src/: asset-resolver.cpp  core-events.cpp  material-library.cpp  material.cpp  renderer-pbr.cpp  scene.cpp  shader-library.cpp  shader.cpp
libraries/lib-gfx-gl/: CMakeLists.txt
libraries/lib-gfx-gl/include/polymer-gfx-gl/: gl-api.hpp  gl-async-gpu-timer.hpp  gl-camera-utils.hpp  gl-loaders.hpp  gl-mesh-util.hpp  gl-particle-system.hpp  gl-post-processing.hpp  gl-procedural-mesh.hpp  gl-renderable-grid.hpp  gl-renderable-meshline.hpp  gl-texture-view.hpp
libraries/lib-gfx-gl/include/polymer-gfx-gl/post/: gl-unreal-bloom.hpp
libraries/lib-model-io/: CMakeLists.txt
libraries/lib-model-io/include/polymer-model-io/: fbx-importer.hpp  gaussian-splat-io.hpp  gltf-io.hpp  model-io-util.hpp  model-io.hpp
libraries/lib-model-io/src/: fbx-importer.cpp  gltf-io.cpp  model-io.cpp
libraries/lib-polymer/: CMakeLists.txt
libraries/lib-polymer/include/polymer-core/: lib-polymer.hpp
libraries/lib-polymer/include/polymer-core/math/: linalgx.hpp  math-color.hpp  math-common.hpp  math-core.hpp  math-morton.hpp  math-primitives.hpp  math-projection.hpp  math-ray.hpp  math-sampling.hpp  math-spatial.hpp
libraries/lib-polymer/include/polymer-core/queues/: queue-circular.hpp  queue-mpmc-blocking.hpp  queue-mpmc-bounded.hpp  queue-mpsc-bounded.hpp  queue-mpsc.hpp  queue-spsc.hpp
libraries/lib-polymer/include/polymer-core/tools/: algo-misc.hpp  arcball.hpp  bvh.hpp  camera.hpp  colormap.hpp  geometry.hpp  image-buffer.hpp  lib-polymer.hpp  movement-tracker.hpp  octree.hpp  one-euro.hpp  oriented-bounding-box.hpp  parabolic-pointer.hpp  parallel-transport-frames.hpp  poisson-disk.hpp  polynomial-solvers.hpp  procedural-mesh.hpp  property.hpp  quick-hull.hpp  simple-animator.hpp  simplex-noise.hpp  splines.hpp  trajectory.hpp
libraries/lib-polymer/include/polymer-core/util/: bit-mask.hpp  guid.hpp  memory-pool.hpp  string-utils.hpp  util-win32.hpp  util.hpp
libraries/lib-polymer/src/: lib-polymer.cpp  util-win32.cpp
libraries/lib-xr/: CMakeLists.txt
libraries/lib-xr/include/polymer-xr/: hmd-base.hpp  openvr-camera.hpp  openvr-hmd.hpp  xr-interaction.hpp
libraries/lib-xr/src/: hmd-base.cpp  openvr-camera.cpp  openvr-hmd.cpp  xr-interaction.cpp
samples/gl-galaxy/: CMakeLists.txt  gl-galaxy.cpp
samples/gl-spline-2d/: CMakeLists.txt  gl-spline-2d.cpp  gl-spline-2d.vcxproj
(+371 files in other folders)
